# npTracer

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: clang-format-check.yml
NPTracerPlugin/: CMakeLists.txt  LOP_NPTracerRenderSettings.cpp  LOP_NPTracerRenderSettings.h  NPTracerPlugin.cpp  NPTracerPlugin.h  plugin.cpp
NPTracerPlugin/usdPlugin/: CMakeLists.txt  NPTracerHdRenderBuffer.cpp  NPTracerHdRenderBuffer.h  NPTracerHdRenderDelegate.cpp  NPTracerHdRenderDelegate.h  NPTracerHdRenderParam.cpp  NPTracerHdRenderPass.cpp  NPTracerHdRenderPass.h  NPTracerHdRendererPlugin.cpp  NPTracerHdRendererPlugin.h  debugCodes.cpp  debugCodes.h  plugInfo.json.in
NPTracerPlugin/usdPlugin/primitives/: NPTracerHdLight.cpp  NPTracerHdLight.h  NPTracerHdMaterial.cpp  NPTracerHdMaterial.h  NPTracerHdMesh.cpp  NPTracerHdMesh.h
NPTracerPlugin/usd_plugin/: CMakeLists.txt  NPTracerDebugCodes.cpp  NPTracerDebugCodes.h  NPTracerHdRenderBuffer.cpp  NPTracerHdRenderBuffer.h  NPTracerHdRenderBufferGPU.cpp  NPTracerHdRenderBufferGPU.h  NPTracerHdRenderDelegate.cpp  NPTracerHdRenderDelegate.h  NPTracerHdRenderParam.h  NPTracerHdRenderPass.cpp  NPTracerHdRenderPass.h  NPTracerHdRenderPassGPU.cpp  NPTracerHdRenderPassGPU.h  NPTracerHdRendererPlugin.cpp  NPTracerHdRendererPlugin.h  NPTracerIntegrator.cpp  NPTracerIntegrator.h  debugCodes.cpp  hdMathUtils.h  npTokens.cpp  npTokens.h
NPTracerPlugin/usd_plugin/primitives/: CMakeLists.txt  NPTracerHdLight.cpp  NPTracerHdLight.h  NPTracerHdMaterial.cpp  NPTracerHdMaterial.h  NPTracerHdMesh.cpp  NPTracerHdMesh.h
NPTracerRenderer/: CMakeLists.txt  app.cpp  app.h  assimp_scene.cpp  assimp_scene.h  config.h  context.cpp  context.h  external_impl.cpp  framework.h  main.cpp  scene.cpp  scene.h  structs.h  tokens.h  utils.h
NPTracerRenderer/shaders/: core.slang  rt.slang  slangdconfig.json
NPTracerRenderer/shaders/common/: interactions.slang  structs.slang  stylizations.slang  utils.slang
NPTracerRenderer/src/: CMakeLists.txt  app.cpp  context.cpp  context.h  utils.h
NPTracerRenderer/systems/: CMakeLists.txt  render_system.cpp
NPTracerRenderer/templates/: CMakeLists.txt  scene.inl
cmake/: Config.cmake.in  GenerateFilePostBuild.cmake  config.h.in  core_utils.cmake  hou_utils.cmake  slang_utils.cmake  usd_utils.cmake
scripts/: format.ps1
