cmake_minimum_required(VERSION 3.20)

project(NPTracer)

set(CMAKE_CXX_STANDARD 17) # c++17 will be enforced globally to match Houdini library code
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
get_property(IS_MULTI_CONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)

set(NPTracer_CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" CACHE INTERNAL "NPTracer CMake Module Path")
set(NPTracer_CMAKE_BINARY_PREFIX_PATH "${CMAKE_CURRENT_BINARY_DIR}/cmake" CACHE INTERNAL "NPTracer CMake Binary Module Path")
list(APPEND CMAKE_MODULE_PATH "${NPTracer_CMAKE_MODULE_PATH}") # add `cmake` subdirectory to module search path

include(core_utils)
include(hou_utils)

HouUtilsEnsureVariables()

set(CMAKE_INSTALL_PREFIX "${CUSTOM_USD_DSO_PATH}") # set install root to dir on Houdini search path

set(Houdini_DIR "${HOUDINI_INSTALL_PATH}/toolkit/cmake")
find_package(Houdini CONFIG REQUIRED)
HouUtilsAnnounceState() # announce which variables are now available after `find_package`

# define cache variables here in case of need for cross-project interaction later
set(NPTracer_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE INTERNAL "NPTracer Root Directory") # set all to `INTERNAL` as they do not need to be exposed in GUIs
set(NPTracerPlugin_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/NPTracerPlugin" CACHE INTERNAL "NPTracer Plugin Root Directory")
set(NPTracerRenderer_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/NPTracerRenderer" CACHE INTERNAL "NPTracer Renderer Root Directory" FORCE)

set(NPTracer_EXTERNAL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/external" CACHE INTERNAL "NPTracer External Dependency Directory" FORCE)

# add GLFW
set(GLFW_BUILD_DOCS OFF)
set(GLFW_INSTALL OFF)
add_subdirectory(${NPTracer_EXTERNAL_DIR}/glfw)

# add GLM
add_subdirectory(${NPTracer_EXTERNAL_DIR}/glm)

# create a list of targets that are generated from adding external projects
set(EXTERNAL_TARGETS
    "glfw"
    "update_mappings" # a target from `glfw`
    "glm-header-only"
    "glm"
    CACHE STRING "Targets generated by externally added CMake projects." FORCE
)

# ensure external targets are not top-level
foreach(tgt IN LISTS EXTERNAL_TARGETS)
    set_target_properties(${tgt} PROPERTIES FOLDER "external/${tgt}")
endforeach()

add_subdirectory(NPTracerRenderer)
add_subdirectory(NPTracerPlugin)