cmake_minimum_required(VERSION 3.24)

project(NPTracer)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_CXX_EXTENSIONS FALSE)

set_property(GLOBAL PROPERTY USE_FOLDERS TRUE)
get_property(IS_MULTI_CONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
add_compile_options($<$<CONFIG:RelWithDebInfo>:/Od>) # prevent compiler optimization globally

set(NPTracer_CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" CACHE INTERNAL "NPTracer CMake Module Path")
set(NPTracer_CMAKE_BINARY_PREFIX_PATH "${CMAKE_CURRENT_BINARY_DIR}/cmake" CACHE INTERNAL "NPTracer CMake Binary Module Path")
list(APPEND CMAKE_MODULE_PATH "${NPTracer_CMAKE_MODULE_PATH}") # add `cmake` subdirectory to module search path

include(CMakePackageConfigHelpers) # used later on for installation
include(core_utils)
include(hou_utils)
include(usd_utils)

SetupDebugCompileDefinition("NPTRACER" TRUE) # will create a boolean variable named `CMAKE_NPTRACER_DEBUG`

# define cache variables here in case of need for cross-project interaction later
set(NPTracer_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE INTERNAL "NPTracer Root Directory") # set all to `INTERNAL` as they do not need to be exposed in GUIs
set(NPTracer_EXTERNAL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/external" CACHE INTERNAL "NPTracer External Dependency Directory")

# add GLFW
set(GLFW_BUILD_DOCS FALSE CACHE INTERNAL "")
set(GLFW_INSTALL FALSE CACHE INTERNAL "")
add_subdirectory(${NPTracer_EXTERNAL_DIR}/glfw)

# add GLM
add_subdirectory(${NPTracer_EXTERNAL_DIR}/glm)

# add assimp
set(ASSIMP_BUILD_TESTS FALSE CACHE INTERNAL "")
set(ASSIMP_INSTALL FALSE CACHE INTERNAL "")
set(ASSIMP_WARNINGS_AS_ERRORS FALSE CACHE INTERNAL "")
set(ASSIMP_BUILD_ASSIMP_TOOLS FALSE CACHE INTERNAL "")
set(ASSIMP_NO_EXPORT FALSE CACHE INTERNAL "")
set(ASSIMP_ENABLE_BOOST_WORKAROUND FALSE CACHE INTERNAL "")
set(ASSIMP_BUILD_ZLIB TRUE CACHE INTERNAL "")
set(ASSIMP_ENABLE_TBB FALSE CACHE INTERNAL "")
add_subdirectory(${NPTracer_EXTERNAL_DIR}/assimp)

# create a list of targets that are generated from adding external projects
set(EXTERNAL_TARGETS
    "glfw"
    "update_mappings" # a target from `glfw`
    "glm"
    "glm-header-only" # required by `glm`
    "assimp"
    "zlibstatic"
    "UpdateAssimpLibsDebugSymbolsAndDLLs"
    CACHE INTERNAL "Targets generated by externally added CMake projects."
)

# ensure external targets are not top-level
foreach(tgt IN LISTS EXTERNAL_TARGETS)
    set_target_properties(${tgt} PROPERTIES FOLDER "external/${tgt}")
endforeach()

add_subdirectory(NPTracerRenderer)
add_subdirectory(NPTracerPlugin)